[Mac] _drt_descriptionSuitableForTestResult generate an exception for absolute paths above the main frame https://bugs.webkit.org/show_bug.cgi?id=71342

Patch by Benjamin Poulain <bpoulain@apple.com> on 2011-11-01
Reviewed by Darin Adler.

Tools:

[NSURL _drt_descriptionSuitableForTestResult] was generating a NSRangeException due to the call to
[NSString substringFromIndex:] with an index out of the string range.

The source of this path is the test-loading-archive-subresource-null-mimetype.html which load a subresource
from the root of the disk.
The problem was hidden because the exception are catched when calling the delegate.

This patch changes _drt_descriptionSuitableForTestResult to return absolute string if the resource is not
in a subdirectory of the main frame.

* DumpRenderTree/mac/ResourceLoadDelegate.mm:
(-[NSURL _drt_descriptionSuitableForTestResult]):

LayoutTests:

Update the test results following the fix of _drt_descriptionSuitableForTestResult.

* webarchive/loading/test-loading-archive-subresource-null-mimetype-expected.txt:

Canonical link: https://commits.webkit.org/87625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99031 268f45cc-cd09-0410-ab3c-d52691b4dbfc